# revit_with_worker

./: .gitignore  README.md  mock_worker_backend.py  pyproject.toml  revit_worker.local.yaml  revit_worker.yaml  run_revit_worker.py
revit_code_generator/: check_revit_mcp_tools.py  execute_revit_workflow.py  mcp_config.yaml  probe_revit_client.py
revit_code_generator/graph/: revit_workflow.py
revit_code_generator/graph/edges/: __init__.py  abort_if_no_script.py  revit_router.py  router.py
revit_code_generator/graph/nodes/: code_evaluators.py  code_generators.py  revit_client.py  revit_natural_language_interpreter.py
revit_code_generator/graph/nodes/node_lib/: base_code_evaluator.py  base_code_generator.py  base_node.py
revit_code_generator/graph/prompts/: interpreter_sys.txt  interpreter_sys_cypherbench.txt  interpreter_sys_rus.txt  revit_interpreter_sys.txt  revit_script_generator_sys.txt  script_evaluator_sys.txt  script_evaluator_sys_rus.txt  script_evaluator_usr_template.txt
revit_code_generator/graph/states/: graph_state.py
revit_code_generator/llm/: factory.py
revit_code_generator/utils/: code.py  logger.py  mcp_http.py  session.py
tests/: test_revit_worker_payload.py  test_revit_worker_tls.py
worker-server/: .gitignore  .gitlab-ci.yml  README.md  default.yaml  pyproject.toml  pytest.ini
worker-server/src/worker_server/: __init__.py  abs_server.py  file_handler.py  http_server.py  retry_session.py  typings.py  utils.py
worker-server/tests/: conftest.py  test_server.py
