[project]
name = "revit-with-worker"
version = "0.1.0"
description = "Python project for Revit worker development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<3.11",
    "chainlit",
    "demjson3",
    "gigachat",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "json5",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "loguru",
    "mcp>=1.27.1",
    "openai",
    "pydantic",
    "python-dotenv",
    "pyyaml>=6.0.3",
    "requests",
    "rich",
    "tenacity>=9.0,<9.1",
]
